# plone.observability

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTORS.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  qa.yaml  release.yaml  tests.yaml
docs/.vale/styles/config/vocabularies/Project/: accept.txt
docs/plans/: 2026-06-30-documentation-plan.md
docs/sources/: conf.py  ecosystem.md  index.md  llms.txt
docs/sources/_ext/: ecosystem_dashboard.py
docs/sources/_static/: dashboard.css  dashboard.js  site.webmanifest
docs/sources/_templates/: layout.html
docs/sources/_templates/partials/: extra-head.html
docs/sources/explanation/: health-probes.md  index.md  metrics-design.md  tracing.md
docs/sources/how-to/: add-custom-health-check.md  add-custom-metric-formatter.md  add-custom-metric-provider.md  configure-kubernetes-probes.md  enable-opentelemetry-tracing.md  index.md  install.md  scrape-with-prometheus.md
docs/sources/reference/: configuration.md  health-endpoints.md  index.md  interfaces.md  metrics.md  tracing.md
docs/sources/tutorials/: getting-started.md  index.md
docs/sources/tutorials/_assets/: docker-compose.yml
docs/superpowers/plans/: 2026-06-30-subrequest-tracing.md  2026-06-30-zodb-span-counts.md  2026-07-01-render-tracing.md  2026-07-01-zodb-load-time.md
docs/superpowers/specs/: 2026-06-30-subrequest-tracing-design.md  2026-06-30-zodb-span-counts-design.md  2026-07-01-render-tracing-design.md  2026-07-01-zodb-load-time-design.md
news/: +broken-pipe.bugfix.md  +ci-ruff-codestyle.internal  +cookiecutter-wsgi-filters.documentation  +docs-ci.internal.md  +docs-sphinx-site.documentation.md  +initial.feature  +render-tracing.feature  +transformchain-spans.feature  +zodb-load-time.feature  +zpretty-docs-exclude.internal  16.breaking  17.feature  18.bugfix.md  2.feature  21.bugfix  25.bugfix  26.feature  35.bugfix  40.bugfix  43.feature  46.bugfix  49.feature
src/plone/observability/: auth.py  configure.zcml  interfaces.py  metric.py  spans.py
src/plone/observability/health/: checks.py  server.py  wsgi.py
src/plone/observability/metrics/: access.py  configure.zcml  formatters.py  view.py
src/plone/observability/metrics/providers/: conflict.py  content.py  request.py  system.py  zodb.py  zope_runtime.py
src/plone/observability/otel/: catalog.py  configure.zcml  dbcounts.py  exclusions.py  provider.py  pubevents.py  rendering.py  startup.py  subrequest.py  transformchain.py  wsgi.py  zodb.py
tests/: conftest.py  test_access.py  test_auth.py  test_autoinclude.py  test_formatters.py  test_health_server.py  test_health_wsgi.py  test_integration.py  test_metric.py  test_metrics_view.py  test_otel_catalog.py  test_otel_dbcounts.py  test_otel_exclusions.py  test_otel_integration.py  test_otel_provider.py  test_otel_pubevents.py  test_otel_rendering.py  test_otel_subrequest.py  test_otel_transformchain.py  test_otel_wsgi.py  test_otel_zodb.py  test_provider_conflict.py  test_provider_content.py  test_provider_request.py  test_provider_zodb.py  test_provider_zope_runtime.py  test_spans.py  test_startup.py
