[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plone.observability"
version = "1.0.0a1"
description = "Kubernetes-style health probes and metrics for Plone"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Jens Klein", email = "jk@kleinundpartner.at" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Plone",
    "Framework :: Plone :: 6.2",
    "Framework :: Zope",
    "Framework :: Zope :: 5",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "OFS",
    "Products.CMFCore",
    "Zope",
    "zope.component",
    "zope.interface",
    "zope.processlifetime",
]

[project.urls]
Homepage = "https://github.com/plone/plone.observability"
Source = "https://github.com/plone/plone.observability"
Issues = "https://github.com/plone/plone.observability/issues"

[project.optional-dependencies]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-plone",
    "plone.app.testing",
    "plone.testing",
]

[project.entry-points."paste.filter_app_factory"]
observability = "plone.observability.metrics.providers.request:make_filter"

[tool.hatch.build.targets.wheel]
packages = ["src/plone"]

[tool.towncrier]
package = "plone.observability"
filename = "CHANGES.md"
directory = "news/"
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/plone/plone.observability/issues/{issue})"
underlines = ["", "", ""]
start_string = "<!-- towncrier release notes start -->\n"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal:"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation:"
showcontent = true
